--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.21.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "rollup": "^4.24.0"
   }
 }
